# machine-learning-premier-league-predictor

./: .dockerignore  .env.example  .gitignore  Comment lire une documentation comme un développeur pro.docx  Dockerfile  Dockerfile.fastapi  README.md  docker-compose.yml  plan.docx  pyproject.toml  requirements.txt  setup.py  test_setup.py
.dvc/: config
.github/workflows/: basic_checks.yml  data_pipeline.yml
.hf/: spaces.yaml
app/: complete_dashboard.py  main_dashboard.py  model_loader.py  simple_dashboard.py  streamlit_with_fastapi.py
app/fastapi_app/: __init__.py  main.py  requirements_api.txt  requirements_fastapi.txt
app/fastapi_app/endpoints/: __init__.py  analytics.py  montecarlo.py  predictions.py
app/fastapi_app/models/: __init__.py  predictor.py
app/fastapi_app/utils/: __init__.py  data_loader.py
data/dvc/processed/: premier_league_processed_20251111_123454.csv.dvc
data/dvc/raw/: premier_league_raw_20251111_123454.csv.dvc
deployment_data/: deployment_config.json
mlops/workflow/: dvc_setup.py
plan/: MLops.docx  plan.docx  ~$plan.docx
scripts/: prepare_deployment.py
src/: __init__.py
src/config/: config.py
src/data_scraping/: cleaner.py  config.py  features.py  init.py  main.py  pipeline.py  scraper.py  scraping_simple.py  scrapping.ipynb  test.ipynb
src/features/: generate_form_features.py
src/modeling/: advanced_models.py  baseline_model.py  improved_baseline.py  monte_carlo_simulator.py  optimized_logistic.py
src/monitoring/: mlflow_logger.py  mlflow_setup.py
tests/: test_mlops_setup.py
(+1 files in other folders)
